since 1.2 relase ( 'til 1.3 beta 1 :-)
======================================

- real more than one currency support
- new date and time formats
- enhanced the "Text to Columns", "Insert from file" 
  and "Insert from clipboard" dialog to support "ignore double delimiters"
- enhanced the CSV import dlg to support "ignore double delimiters"
- enhanced the CSV export dialog so that you can choose
   - table to export
   - delimiters between tables
   - delimiter between cells
   - character for quotes
- Goal Seek message fixes + you can select the cells with the mouse now
- enhanced Gnumeric import filter to support 
    - background (color + patterns), borders (colors + style)
    - font formating, text alignment
    - format parsing (date, time, numbers,...), cell height, width
    - print range, page setup, hidden columns/row, comments
- OpenCalc export and import filter
- Added subtotal dialog and formula
- Paper layout can now be applied to all sheets
- now you can define the default cell style
- Autoscroll while selecting now also available for columns and row headers
- When cell is too short, then the content is now available in the tooltip
- added OpenCalc export and import filter
- Drag 'n' Drop of selections
- Protection of sheets or of the document structure (with or without password)
- Protection tab in layout dialog: you unprotect certain cells, hide their
  contents, hide the formulas, or select them for not being printed
- FindNext, FindPrevious cell enhancement for find
- Fill: Fill area from right to left, left to right, bottom to top, top to bottom


New functions:

Date/Time (16):
- EDATE, EOMONTH, DAYS360, WEEKDAY, TIMEVALUE, DATEVALUE, YEAR,
  MONTH, DAY, HOUR, MINUTE, SECOND, DAYNAME, MONTHNAME, EASTERSUNDAY,
  ISOWEEKNUM

Math (16):
- SUBTOTAL, POWER, TRUNC, CEILING, PRODUCT (now Excel compatible), 
  KPRODUCT, RANDEXP, RANDBINOM, RANDNEGBINOM, RANDBERNOULLI,
  RANDPOISSON, MROUND, COUNTA, MINA, MAXA, SUMA

Statistical (24):